<resources>
    <string name="app_name">Inattentive Drivers</string>
    <string name="title_newtrip">New Trip</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="password">Password</string>
    <string name="confirm_signup">Confirm</string>
    <string name="global_rank">Rank</string>
    <string name="e_mail">E-mail</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Repeat Password</string>
    <string name="title_settings">Settings</string>
    <string name="geoloc">Geo-localization</string>
    <string name="not_tracking">Not tracking location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="switch_gps">Using GPS sensors</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>