<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_newtrip">

    <fragment
        android:id="@+id/navigation_newtrip"
        android:name="it.unipi.dii.careful.ui.newtrip.NewTripFragment"
        android:label="@string/title_newtrip"
        tools:layout="@layout/fragment_newtrip" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="it.unipi.dii.careful.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="it.unipi.dii.careful.ui.profile.SignInSignUp"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_signin_signup" />

</navigation>